examples/misc/error/execution/overflow1.bfr
codegen $

$build {x; y}

+ x 255
+ y 256